# ledger-polkadot-generic-api

./: .gitignore  .yarnrc.yml  README.md  README.ts.md  chains.yaml  package.json  tsconfig.json  zondax.yaml
.github/: dependabot.yml
.github/workflows/: check.ts.yml
docs/: openapi.yaml
earthly-dockerfile/: Dockerfile  Earthfile
rust/: Cargo.toml  index.d.ts
rust/src/: helper.rs  lib.rs
src/: consts.ts  index.ts  server.ts  types.ts
src/handlers/: chains.ts  nodeMetadata.ts  nodeMetadataFlush.ts  nodeMetadataHash.ts  nodeProps.ts  transactionMetadata.ts
src/utils/: chains.ts  errors.ts  getApi.ts  getProperties.ts  metadata.ts  types.ts
tests/: common.test.ts
