[package]
name = "get-metadata"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame-metadata = { version = "16.0.0", default-features = false, features = [
  "current",
  "decode",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
merkleized-metadata = { git = "https://github.com/Zondax/merkleized-metadata", default-features = false, rev = "298633f2683a4ead4b396e7cd86ca8c239f5596d" }
neon = "1.0.0"
parity-scale-codec = { version = "3.6.9", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
array-bytes = { version = "6.2.3", default-features = false }
scale-decode = { version = "0.13.1", default-features = false }
